# SHL-RECOMMENDER

./: .gitignore  build_index.py  main.py  pyproject.toml  requirements.txt
Prompt/: build_prompt.py  prompt.py
app/: router.py
data/: search_index.pkl
model/: model.py
